--- a/logic-app-pipeline-infra.yml
+++ b/logic-app-pipeline-infra.yml
@@ -7,7 +7,7 @@ pool:
 variables:
 #the storage account information for the terraform state data, replace with your own resource
   terraformstoragerg: 'tfdeploy'
-  terraformstorageaccount: 'huidongtf'
+  terraformstorageaccount: 'tfdeploy'
   storagekey: 'PipelineWillGetThisValueRuntime'
   terraformstorageaccountcontainer: 'terraform'
 
@@ -37,17 +37,17 @@ stages:
     displayName: 'TF deploy' 
     steps:
     ######This step is not needed if the storage account for terraform is already created######
-    # - task: AzureCLI@1
-    #   displayName: 'Azure CLI to create storage account for terraform'
-    #   inputs:
-    #     azureSubscription: 'Huidong Liu (cc0ecbfb-0faf-492d-8996-be21d0865ca6)'
-    #     scriptLocation: inlineScript
-    #     inlineScript: |
-    #      #this will create Azure resource group
-    #      call az group create --location westus --name $(terraformstoragerg)      
-    #      call az storage account create --name $(terraformstorageaccount) --resource-group $(terraformstoragerg) --location eastus --sku Standard_LRS       
-    #      call az storage container create --name terraform --account-name $(terraformstorageaccount)
-    #      call az storage account keys list -g $(terraformstoragerg) -n $(terraformstorageaccount)
+    - task: AzureCLI@1
+      displayName: 'Azure CLI to create storage account for terraform'
+      inputs:
+        azureSubscription: '47324483-dabd-4295-aedf-829cc6cf68ab'
+        scriptLocation: inlineScript
+        inlineScript: |
+         #this will create Azure resource group
+         call az group create --location westeurope --name $(terraformstoragerg)      
+         call az storage account create --name $(terraformstorageaccount) --resource-group $(terraformstoragerg) --location westeurope --sku Standard_LRS       
+         call az storage container create --name terraform --account-name $(terraformstorageaccount)
+         call az storage account keys list -g $(terraformstoragerg) -n $(terraformstorageaccount)
 
     - task: DownloadPipelineArtifact@2
       inputs:
@@ -57,7 +57,7 @@ stages:
     - task: AzurePowerShell@3
       displayName: 'Azure PowerShell script to get the storage key'
       inputs:
-        azureSubscription: 'Huidong Liu (cc0ecbfb-0faf-492d-8996-be21d0865ca6)' #replace this with your own service connection name
+        azureSubscription: 'ADO-R2F' #'47324483-dabd-4295-aedf-829cc6cf68ab' #replace this with your own service connection name
         ScriptType: InlineScript
         Inline: |
          # using this script to fetch storage key required in terraform file
@@ -82,7 +82,7 @@ stages:
       displayName: 'Terraform : init'
       inputs:
         workingDirectory: '$(Build.ArtifactStagingDirectory)/Terraform'
-        backendServiceArm: 'Huidong Liu (cc0ecbfb-0faf-492d-8996-be21d0865ca6)' #replace this with your own service connection name
+        backendServiceArm: 'ADO-R2F' #'47324483-dabd-4295-aedf-829cc6cf68ab' #replace this with your own service connection name
         backendAzureRmResourceGroupName: '$(terraformstoragerg)'
         backendAzureRmStorageAccountName: '$(terraformstorageaccount)'
         backendAzureRmContainerName: '$(terraformstorageaccountcontainer)'
@@ -93,7 +93,7 @@ stages:
       inputs:
         command: plan
         workingDirectory: '$(Build.ArtifactStagingDirectory)/Terraform'
-        environmentServiceNameAzureRM: 'Huidong Liu (cc0ecbfb-0faf-492d-8996-be21d0865ca6)' #replace this with your own service connection name
+        environmentServiceNameAzureRM: 'ADO-R2F' #'47324483-dabd-4295-aedf-829cc6cf68ab' #replace this with your own service connection name
 
     - task: ms-devlabs.custom-terraform-tasks.custom-terraform-release-task.TerraformTaskV2@2
       displayName: 'Terraform :  apply -auto-approve'
@@ -101,7 +101,7 @@ stages:
         command: apply
         workingDirectory: '$(Build.ArtifactStagingDirectory)/Terraform'
         commandOptions: '-auto-approve'
-        environmentServiceNameAzureRM: 'Huidong Liu (cc0ecbfb-0faf-492d-8996-be21d0865ca6)' #replace this with your own service connection name
+        environmentServiceNameAzureRM: 'ADO-R2F' #'47324483-dabd-4295-aedf-829cc6cf68ab' #replace this with your own service connection name
         backendServiceArm: 
         backendAzureRmResourceGroupName: '$(terraformstoragerg)'
         backendAzureRmStorageAccountName: '$(terraformstorageaccount)'
